--- a/FirstWeek/index.html
+++ b/FirstWeek/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>WebGL Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
     <p>You caught <strong>0</strong>, You missed <strong>0</strong></p>
