split shader from html

--- a/FirstWeek/index.html
+++ b/FirstWeek/index.html
@@ -10,6 +10,6 @@
 <body>
     <p>You caught <strong>0</strong>, You missed <strong>0</strong></p>
     <canvas>브라우저에서 HTML5 Canvas를 지원하지 않습니다.</canvas>
-    <script src="main.js"></script>
+    <script src="../dist/FirstWeek.js"></script>
 </body>
 </html>
